# constellation-reed-solomon

./: Cargo.toml  README.md
benches/: encode_decode.rs
scripts/: netem_sim.sh
src/: constellation.rs  lib.rs
src/internals/: gf256.rs  mod.rs  rs.rs
tests/: internals.rs  roundtrip.rs
