[package]
name = "constellation-reed-solomon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Constellation-parameterised Reed-Solomon erasure coding, built on the crate Agave uses and re-parameterised from Turbine's FEC sizing to Constellation's proposer/attester sizing."
repository = "https://github.com/Allen-Saji/constellation-reed-solomon"
readme = "README.md"
keywords = ["reed-solomon", "erasure-coding", "solana", "constellation", "galois-field"]
categories = ["algorithms", "encoding"]

# Pinned to the exact crate+version Agave uses (see ledger/Cargo.toml in
# anza-xyz/agave). galois_8 = GF(2^8); max total shards = 256, which is exactly
# Constellation's Gamma_p. Agave additionally enables "simd-accel"; left off here
# for portable builds (flip it on to match Agave's production path).
[dependencies]
reed-solomon-erasure = "6.0.0"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "encode_decode"
harness = false

[profile.release]
lto = true
codegen-units = 1
